--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -1,23 +1,25 @@
 .u-center-text {
-  text-align: center;
+  text-align: center !important;
 }
 
 .u-margin-bottom-big {
-  margin-bottom: 8rem;
+  margin-bottom: 8rem !important;
 }
 
 .u-margin-bottom-medium {
-  margin-bottom: 4rem;
+  margin-bottom: 4rem !important;
 }
 
 .u-margin-bottom-small {
-  margin-bottom: 1.5rem;
+  margin-bottom: 1.5rem !important;
 }
 
 .u-margin-top-big {
-  margin-bottom: 8rem;
+  margin-bottom: 8rem !important;
 }
 
 .u-margin-huge-big {
-  margin-bottom: 10rem;
+  margin-bottom: 10rem !important;
 }
+
+//!important on utilities is common practice - I think it could be donw better here this was to adda a margin to the button on the booking form
