--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,5 +1,6 @@
 .btn {
-
+  
+  &,
   &:link,
   &:visited {
     display: inline-block;
@@ -10,6 +11,8 @@
     transition: all .2s;
     position: relative;
     font-size: $default-font-size;
+
+    cursor: pointer;
   }
 
   &:hover {
@@ -23,7 +26,9 @@
     }
   }
 
-  &:active {
+  &:active,
+  &:focus {
+    outline: none;
     transform: translateY(-.1rem);
     box-shadow: 0 .5rem 1rem rgba($color-black, .2);
   }
