--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -121,10 +121,7 @@
 
   //BACK SIDE STYLING
   &__cta {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    @include centerHorizantalVertical;
     width: 90%;
     text-align: center;
     //also done in header to center
